biome gen fixes